[package]
name = "diana"
version = "0.1.0"
authors = ["Louis Sullivan"]
edition = "2021"

[lib]
name = "diana_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["api-all"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1"
dotenvy = "0.15"